tests/NormalTests/paczka1/small_fuzzy/33192773.err
Error in line 10: HD5FtySyqG0 S129 81,2
